--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -30,6 +30,16 @@ jobs:
 
       - name: "Move scripts"
         run: mv dist/* .
+        
+      - name: Bash
+        if: github.ref == 'refs/heads/master'
+        run: |
+          ls -al
+          git config --global user.email "sarah.kocher12@gmail.com"
+          git config --global user.name "Katastrophet"
+          git checkout master
+          git add .
+          git commit -am "Adding files"
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
